# ddtp-translate

./: .gitignore  CHANGELOG.md  DDTSS.md  README.md  ddtp-translate_0.8.0-1_all.deb  po4a.cfg  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml  transifex-sync.yml
.tx/: config
data/: se.danielnylander.ddtp-translate.desktop  se.danielnylander.ddtp-translate.desktop.in
data/man/: ddtp-translate.1
debian/: changelog  control  copyright  files  install  rules  watch
debian/upstream/: metadata
po/: README.md  ar.po  cs.po  da.po  ddtp-translate.pot  de.po  es.po  fi.po  fr.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  sv.po~  uk.po  zh_CN.po
po/man/: ddtp-translate.1.pot  sv.po
src/ddtp_translate/: __init__.py  __init__.py.bak  __main__.py  ddtp_api.py  ddtss_client.py  main.py  settings.py  smtp_sender.py
